	- One of the largest issues with WriteDialogue() is that it has a statement to hold you in it until you progress through the section, but it has to trigger strings being drawn immediately when no trigger is in the Draw() method. Is it at all plausible to create a spritebatch and draw in the method, outside of Draw()? A different way of waiting that still allows Draw() to function could solve this as well.

//James Friedenberg 8:56PM 5/8/2016
	- Created and implemented instructions screen before class select

//Juri Kiin 11:39 PM 5/8/2016
	- Placed some enemies.


//Juri Kiin 4:23 AM 5/9/2016
	- Put together the game.
	- Placed enemies, tweaked stats, fumbled with enumerators
	

//Juri Kiin 9:15 AM 5/9/2016
	- Fixed end level collision placement.

//Juri Kiin 9:53 AM 5/9/2016
	- Added an end game check.

//Juri Kiin 10:10 AM 5/9/2016
	- Fixed starting game so the level resets if you want to play again or die.


//Juri 10:53 AM 5/9/2016
	- Added enemy sprites in background of combat.

//Juri Kiin 10:37 PM 5/10/2016
	- Added a wider rectangle for the player to hit an enemy.

//James Friedenberg 9:48 PM 5/11/2016
	- Created Controls UI, created button for continuing dialogue, updated directions page, updated Choice UI, updated Class Selection UI
	- In process of creating and implementing different Items menus for each individual class. Process works, just need to create the content
	- Changed the buttons of the menu system and added the Controls page game state into the fray

//Juri Kiin 11:44 PM 5/11/2016
	- Fixed the level switching
	- Nerfed the final bosses
	- Added a large box around every enemy
	- Changed dying on the final boss.

//James Friedenberg 5:32 AM 5/12/2016
	- Created and implemented items menus for Assassin, Warrior, and Barbarian classes