@@ -222,3 +222,9 @@
 
 //James Friedenberg 5:32 AM 5/12/2016
 	- Created and implemented items menus for Assassin, Warrior, and Barbarian classes
+
+//Juri Kiin 4:29 PM 5/12/2016
+	- Fixed postdeath resetting of the game
+	- Made the enemies have different sprites
+	- fixed the larger box collisions
+	- make the sprites' rectangles look better and fit better on the screen.
